--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
+  background: rgb(55, 181, 119);
+  background: linear-gradient(
+    95deg,
+    rgba(55, 181, 119, 1) 39%,
+    rgba(170, 222, 90, 1) 100%
+  );
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,4 +14,3 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
