--- a/src/DisplayResults.css
+++ b/src/DisplayResults.css
@@ -2,9 +2,15 @@
   margin: 15px;
 }
 
-.DisplayResults .circle {
-  border: 2px solid white;
+.DisplayResults .square {
+  border: 2px solid rgb(245, 216, 52);
+  background-color: rgb(245, 216, 52);
+  color: rgb(20, 18, 18);
+  width: 85%;
   border-radius: 20px;
+  display: block;
+  margin: 15px auto;
+  padding: 25px 14px;
 }
 
 .DisplayResults .arrows {
@@ -12,4 +18,9 @@
   min-width: 35px;
   margin: 15px 10px;
   padding: 2px;
+}
+
+.DisplayResults h1 {
+  margin: 20px 15px;
+  padding: 8px;
 }
