--- a/src/CurrencyConverter.css
+++ b/src/CurrencyConverter.css
@@ -8,7 +8,7 @@
 }
 
 .CurrencyConverter .left-side {
-  background-color: white;
+  background-color: rgb(252, 250, 250);
   border-radius: 10px 0px 0px 10px;
   display: flex;
   flex-direction: column;
