--- a/src/CurrencyConverter.css
+++ b/src/CurrencyConverter.css
@@ -9,7 +9,7 @@
 
 .CurrencyConverter .left-side {
   background-color: rgb(252, 250, 250);
-  border-radius: 10px 0px 0px 10px;
+  border-radius: 2px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,7 +18,7 @@
 .CurrencyConverter .right-side {
   background-color: #3cbc7d;
   color: white;
-  border-radius: 0px 10px 10px 0px;
+  border-radius: 2px;
   box-shadow: -2px 9px 24px 5px rgba(247, 245, 235, 0.2);
   display: flex;
   flex-direction: column;
