--- a/src/DisplayResults.css
+++ b/src/DisplayResults.css
@@ -18,7 +18,7 @@
 }
 
 .DisplayResults h1 {
-  margin: 20px 15px;
+  margin: 30px 10px 15px 10px;
   padding: 8px;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .DisplayResults section {
-  margin: 36px 10px;
+  margin: 10px;
   padding: 10px 0px;
 }
 
