--- a/src/CurrencyConverter.css
+++ b/src/CurrencyConverter.css
@@ -2,7 +2,7 @@
   color: black;
   display: block;
   margin: 0 auto;
-  padding: 50px 20px;
+  padding: 50px 20px 20px 20px;
   width: 85%;
   max-width: 1400px;
 }
